# automation-agents

./: .gitignore  README.md  pyproject.toml
app/agents/: bt_run_agent.py
app/application/bt_run/: dto.py  ports.py  use_cases.py
app/bootstrap/: bt_run_container.py
app/common/: result.py
app/domain/bt_run/: compare.py  config_compare.py  models.py  run_context.py  run_result.py
app/infrastructure/process/: subprocess_runner.py
app/infrastructure/storage/: config_loader.py  decision_bundle_store.py
app/tools/bt_run/: run_backtest_tool.py  run_runner_tool.py
app/tools/compare/: compare_all_runs_tool.py  compare_config_tool.py  compare_latest_runs_tool.py
app/tools/process/: run_backtest_tool.py  run_runner_tool.py
docs/: architecture.md  dev-guidelines.md  session-context.md
docs/adr/: 001-v1a-architecture.md  001-va1-current-state.md  001-va1-next-step.md  001-va1-reference.md
scripts/: analyze_friction_eps.py  compare_weight_dumps.py  mini_multi_agent_demo.py  run_bt_run_agent.py
tests/helpers/: helpers.py
tests/unit/agents/: test_bt_run_agent.py
tests/unit/application/: test_compare_latest_runs_use_case.py
tests/unit/application/bt_run/: test_compare_all_runs_use_case.py
tests/unit/domain/: test_compare.py
tests/unit/domain/bt_run/: test_compare.py  test_config_compare.py
tests/unit/infrastructure/: test_decision_bundle_store.py
tests/unit/scripts/: test_analyze_friction_eps.py  test_compare_weight_dumps.py  test_deterministic_ranking.py  test_portfolio_store_history.py  test_run_bt_run_agent_manifest.py
(+5 files in other folders)
